Fixed paths in code generators

--- a/Prototype1/Normalized/CodeGenerator.tt
+++ b/Prototype1/Normalized/CodeGenerator.tt
@@ -1,6 +1,6 @@
 ﻿<#@ template language="C#" hostspecific="True" debug="true"
 #><#@include file="..\Configuration\Manager.ttinclude"
-#><#@ assembly name="C:\Users\Pluto\Documents\GitHub\hairy-nemesis\Prototype1\ModuleParser\bin\Debug\ModuleParser.dll"
+#><#@ assembly name="$(SolutionDir)\ModuleParser\bin\Debug\ModuleParser.dll"
 #><#@ assembly name="System.Core"
 #><#@ import namespace="ModulesParser"
 #><#@ import namespace="System.Collections.Generic"
@@ -24,7 +24,7 @@ namespace Modules.Engine
 foreach(var d in parser.Data.Values)
 {
 	manager.StartNewFile(string.Format("{0}.generated.cs", d.Name)); #>
-<#=d.GetSummary("	")#>
+	<#=d.GetSummary("	")#>
 	public partial class <#=d.Name#><#=d.GetBase()#>
 	{
 <#=d.GetFieldDeclarations("		")
