Renamed login server service

--- a/Prototype1/Server.Login/Server.Login.ContractCodeGenerator.tt
+++ b/Prototype1/Server.Login/Server.Login.ContractCodeGenerator.tt
@@ -18,7 +18,7 @@ using System.Linq;
 using System.Threading.Tasks;
 using System.Runtime.Serialization;
 
-namespace Server
+namespace Server.Login
 {
 <#
 foreach(var m in parser.Messages.Values.Where(v=>v.ExposedToClient))
