--- a/Prototype1/Server.Login/Server.Login.Code.tt
+++ b/Prototype1/Server.Login/Server.Login.Code.tt
@@ -50,177 +50,12 @@ foreach(var d in parser.Data.Values)
 		}
 
 		partial void On<#=d.Name#>Init();
-<#
-	if(d.Lists.Count>0)
-	{#>
-
-		#region List access
-<#
-	}
-	foreach(var l in d.Lists.Values)
-	{
+<#@include file="..\Configuration\ListAccess.include.tt"
+#><#@include file="..\Configuration\Events.include.tt"
 #>
 
-		protected readonly object <#=l.Name#>SyncRoot = new object();
-		public void Add<#=l.Name#>(<#=l.ListElement.GetTypeName()#> <#=l.ListElement.GetName()#>)
-		{
-			lock (this.<#=l.Name#>SyncRoot)
-			{
-				if (this.<#=l.Name#> == null) this.<#=l.Name#> = new List<<#=l.ListElement.GetTypeName()#>>();
-				this.<#=l.Name#>.Add(<#=l.ListElement.GetName()#>);
-<#		if(l.IsExtendedProperty(d))
-		{
-#>				<#=l.ListElement.GetName()#>.<#=(l.ListElement as DataRefParser).DataType.Extends[d.Name].ParentVar#> = this;
-<#
-		}
-#>			}
-		}
-
-		internal void Remove<#=l.Name#>(<#=l.ListElement.GetTypeName()#> <#=l.ListElement.GetName()#>)
-		{
-			lock (this.<#=l.Name#>SyncRoot)
-			{
-				this.<#=l.Name#>.Remove(<#=l.ListElement.GetName()#>);
-				if (!this.<#=l.Name#>.Any()) this.<#=l.Name#> = null;
-<#		if(l.IsExtendedProperty(d))
-		{
-#>				<#=l.ListElement.GetName()#>.<#=(l.ListElement as DataRefParser).DataType.Extends[d.Name].ParentVar#> = null;
-<#
-		}
-#>			}
-		}
-<#	}#>
-<#
-	if(d.Lists.Count>0)
-	{#>
-		#endregion
-<#
-	}
-	if(parser.Events.Count>0)
-	{#>
-
-		#region Events
-<#
-	}
-	foreach(var e in parser.Events.Values)
-	{#>
-
-		public <# if(d.Base==null) {#>virtual<#}else{#>override<#}#> void <#=e.Name#>(<#=e.Name#>EventParameters e)
-		{
-<#		if(d.Base!=null)
-		{#>
-			base.<#=e.Name#>(e);
-<#
-		}#>
-			var p = new <#=e.Name#>EventParameters(e);
-<#		if(d.Events.ContainsKey(e.Name))
-		{
-			var ev = d.Events[e.Name];
-			foreach(var proc in ev.Processes.Values)
-			{
-#>			<#=proc.Name#>Message <#=e.Name#><#=proc.Name#>Message;
-			if(<#=proc.Name#>Messages.TryPop(out <#=e.Name#><#=proc.Name#>Message))
-				OnProcess<#=e.Name#><#=proc.Name#>Message(<#=e.Name#><#=proc.Name#>Message);
-<#			}
-#>			On<#=e.Name#>(p);
-<#		}
-#>			if(p.Continue)
-			{
-<#
-		foreach(var f in d.Fields.Values)
-		{
-			if(f.ImplementsEvent(e.Name))
-			{#>
-				if(<#=f.Name#> != null) <#=f.Name#>.<#=e.Name#>(p);
-<#			}
-		}
-		foreach(var l in d.Lists.Values)
-		{
-			if(l.ImplementsEvent(e.Name))
-			{#>
-				<#=l.ListElement.GetTypeName()#>[] <#=l.Name#>Copy = null;
-				lock(<#=l.Name#>SyncRoot)
-				{
-					if(<#=l.Name#> != null) 
-						<#=l.Name#>Copy = <#=l.Name#>.ToArray();
-				}
-				if (<#=l.Name#>Copy != null) Parallel.ForEach(<#=l.Name#>Copy, x => { if (x != null)x.<#=e.Name#>(p); });
-<#			}
-		}
-		foreach(var a in d.Arrays.Values)
-		{
-			if(a.ImplementsEvent(e.Name))
-			{#>
-				if (<#=a.Name#> != null)
-					<#=a.GetEventCaller("						",0)#>y => { var a = <#=a.Name#>[<#=a.GetEventLooper(0)#>]; if(a != null) a.<#=e.Name#>(p); }<#=a.GetEventClosure(0)#>;
-<#			}
-		}#>
-			}
-		}
-
-<#
-	}
-	foreach(var e in d.Events.Values)
-	{#>
-		partial void On<#=e.Name#>(<#=e.Name#>EventParameters e);
-<#		foreach(var proc in e.Processes.Values)
-		{
-#>		partial void OnProcess<#=e.Name#><#=proc.Name#>Message(<#=proc.Name#>Message <#=e.Name#><#=proc.Name#>Message);
-<#		}
-	}
-	if(parser.Events.Count>0)
-	{#>
-		#endregion
-<#
-	}#>
-
-<#
-	if(d.Messages.Count>0)
-	{#>
-		#region Messages
-
-<#
-		foreach(var m in d.Messages.Values)
-		{
-			if(m.Handled == MessageHandler.ByEvent)
-			{#>
-		protected ConcurrentQueue<<#=m.Name#>Message> <#=m.Name#>Messages = new ConcurrentQueue<<#=m.Name#>Message>();
-		public void Register<#=m.Name#>Message(<#=m.Name#>Message message)
-		{
-			<#=m.Name#>Messages.Push(message);
-		}
-<#
-			}
-			else
-			{
-				if(m.Declaration.ReturnValue.Count==0)
-				{#>
-		partial void OnProcess<#=m.Name#>Message(<#=m.Name#>Message message);
-		public void Register<#=m.Name#>Message(<#=m.Name#>Message message)
-		{
-			OnProcess<#=m.Name#>Message(message);
-		}
-<#				}
-				else
-				{#>
-		public class <#=m.Name#>MessageReturnValue
-		{
-			public <#=m.Declaration.ReturnValue.Keys.First()#> ReturnValue;
-		}
-		partial void OnProcess<#=m.Name#>Message(<#=m.Name#>Message message, <#=m.Name#>MessageReturnValue returnValue);
-		public <#=m.Declaration.ReturnValue.Keys.First()#> Register<#=m.Name#>Message(<#=m.Name#>Message message)
-		{
-			var returnValue = new <#=m.Name#>MessageReturnValue();
-			OnProcess<#=m.Name#>Message(message, returnValue);
-			return returnValue.ReturnValue;
-		}
-<#				}
-			}
-		}
-	#>
-		#endregion
-<#
-	}#>
+<#@include file="..\Configuration\Messages.include.tt"
+#>
 	}
 <# manager.EndBlock();
 }
