Adding description to messages

--- a/Prototype1/Configuration/Messages.include.tt
+++ b/Prototype1/Configuration/Messages.include.tt
@@ -19,7 +19,9 @@
 			{
 				if(m.Declaration.ReturnValue.Count==0)
 				{#>
+
 		partial void OnProcess<#=m.Name#>Message(<#=m.Name#>Message message);
+		<#=m.Declaration.GetSummary("		")#>
 		public void Register<#=m.Name#>Message(<#=m.Name#>Message message)
 		{
 			OnProcess<#=m.Name#>Message(message);
